--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">EZCommuter</string>
+    <string name="api_key">iX3RjhnwPAjSMHPk3uMfAGP67AFx67-QKAe1OCXCW_2W</string>
     <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
     <string name="auth_failed">Please, check your email and password or Sign up</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
